Updated to tool config files.

--- a/etc/linux-home/tmux.conf
+++ b/etc/linux-home/tmux.conf
@@ -4,6 +4,7 @@
 set -g status-bg blue
 set -g status-fg white
 set-window-option -g window-status-current-bg red
+set-window-option -g automatic-rename off
 
 # Reload
 unbind-key r
@@ -12,8 +13,8 @@ bind-key r source-file ~/.tmux.conf \; refresh-client \; display "Reloaded + Ref
 ### Key Customization
 unbind-key %
 unbind-key '"'
-bind-key | split-window -h
-bind-key - split-window -v
+bind-key | split-window -h -c '#{pane_current_path}'
+bind-key - split-window -v -c '#{pane_current_path}'
 
 # window/pane navegation
 unbind-key p
