--- a/etc/linux-home/tmux.conf
+++ b/etc/linux-home/tmux.conf
@@ -4,6 +4,7 @@
 set -g status-bg blue
 set -g status-fg white
 set-window-option -g window-status-current-bg red
+set-window-option -g allow-rename off
 set-window-option -g automatic-rename off
 
 # Reload
