--- a/etc/linux-home/tmux.conf
+++ b/etc/linux-home/tmux.conf
@@ -41,6 +41,7 @@ unbind-key C-Right
 unbind-key C-Up
 unbind-key C-Down
 unbind-key .
+unbind-key >
 unbind-key o
 
 bind-key -n C-l next-window
@@ -58,6 +59,7 @@ bind-key -r M-l resize-pane -R 5
 bind-key -r M-i resize-pane -U 5
 bind-key -r M-k resize-pane -D 5
 bind-key    .   command-prompt "swap-window -t '%%'"
+bind-key    >   command-prompt "move-window -t '%%'"
 bind-key    o   command-prompt "select-pane -t '%%'"
 
 # clearing things
