--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "etc/linux-home/vim/bundle/nerdtree"]
-	path = etc/linux-home/vim/bundle/nerdtree
-	url = https://github.com/scrooloose/nerdtree.git
+  path = etc/linux-home/vim/bundle/nerdtree
+  url = https://github.com/scrooloose/nerdtree.git
+[submodule "etc/linux-home/vim/bundle/vim-colors-solarized"]
+  path = etc/linux-home/vim/bundle/vim-colors-solarized
+  url = git://github.com/altercation/vim-colors-solarized.git
