--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,7 @@
 [submodule "etc/linux-home/vim/bundle/vim-colors-solarized"]
   path = etc/linux-home/vim/bundle/vim-colors-solarized
   url = git://github.com/altercation/vim-colors-solarized.git
+[submodule "etc/linux-home/tmux/plugins/tpm"]
+  path = etc/linux-home/tmux/plugins/tpm
+  url = https://github.com/tmux-plugins/tpm
+  branch = v3.0.0
