--- a/etc/linux-home/tmux.conf
+++ b/etc/linux-home/tmux.conf
@@ -66,3 +66,9 @@ bind-key    o   command-prompt "select-pane -t '%%'"
 unbind-key K
 bind-key K clear-history \; display "Cleared pane history"
 
+# List plugins for TPM
+set -g @plugin 'tmux-plugins/tpm'
+
+# Initialize Tmux Plugin Manager (TPM)
+# (this must stay at bottom)
+run '~/.tmux/plugins/tpm/tpm'
