--- a/etc/linux-home/tmux.conf
+++ b/etc/linux-home/tmux.conf
@@ -68,6 +68,7 @@ bind-key K clear-history \; display "Cleared pane history"
 
 # List plugins for TPM
 set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-resurrect'
 
 # Initialize Tmux Plugin Manager (TPM)
 # (this must stay at bottom)
