--- a/etc/linux-home/tmux.conf
+++ b/etc/linux-home/tmux.conf
@@ -70,6 +70,9 @@ bind-key K clear-history \; display "Cleared pane history"
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
 
+# Resurrect plugin options
+set -g @resurrect-capture-pane-contents 'on'
+
 # Initialize Tmux Plugin Manager (TPM)
 # (this must stay at bottom)
 run '~/.tmux/plugins/tpm/tpm'
