--- a/etc/linux-home/tmux.conf
+++ b/etc/linux-home/tmux.conf
@@ -14,8 +14,10 @@ bind-key r source-file ~/.tmux.conf \; refresh-client \; display "Reloaded + Ref
 ### Key Customization
 unbind-key %
 unbind-key '"'
+unbind-key 'c'
 bind-key | split-window -h -c '#{pane_current_path}'
 bind-key - split-window -v -c '#{pane_current_path}'
+bind-key c new-window -c '#{pane_current_path}'
 
 # window/pane navegation
 unbind-key p
