Updated to ignore to include vim spelling files generated

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,3 @@
-etc/linux-home/vim/.netrwhist
+/etc/linux-home/vim/.netrwhist
 /etc/linux-home/tmux/resurrect/
+/etc/linux-home/vim/spellfile.en.utf-8.add*
