Update scripts + configs

--- a/etc/linux-home/tmux.conf
+++ b/etc/linux-home/tmux.conf
@@ -1,9 +1,17 @@
 # tmux configuration file
 
+# Mouse mode
+# NOTE: Hold Left-Shift to perform "normal" terminal mouse commands like
+#       highlighting for copy-paste and middle-clicking.
+#set -g mouse on
+
+# Make history longer
+set-option -g history-limit 10000
+
 # colors
 set -g status-bg blue
 set -g status-fg white
-set-window-option -g window-status-current-bg red
+set-window-option -g window-status-current-style bg=red
 set-window-option -g allow-rename off
 set-window-option -g automatic-rename off
 
