--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
+/.crates.toml
+/.crates2.json
 /etc/linux-home/vim/.netrwhist
 /etc/linux-home/tmux/resurrect/
 /etc/linux-home/vim/spellfile.en.utf-8.add*
+/lib/
+/share/
