Terminal color default, poetry PATH export

--- a/etc/linux-home/tmux.conf
+++ b/etc/linux-home/tmux.conf
@@ -1,5 +1,8 @@
 # tmux configuration file
 
+# Term setting
+set -g default-terminal "screen-256color"
+
 # Mouse mode
 # NOTE: Hold Left-Shift to perform "normal" terminal mouse commands like
 #       highlighting for copy-paste and middle-clicking.
