--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,16 @@
 /.crates.toml
 /.crates2.json
+/etc/jupyter
 /etc/linux-home/vim/.netrwhist
 /etc/linux-home/tmux/resurrect/
 /etc/linux-home/vim/spellfile.en.utf-8.add*
 /lib/
 /share/
+
+# Locally built stuff
+/bin/uncrustify
+
+# JetBrains tool scripts
+/bin/clion
+/bin/jetbrains-toolbox
+/bin/pycharm
