ignore expected python bin tools

--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,68 @@
 /lib/
 /share/
 
+# Python package bin stuff
+# -- Automate?
+/bin/ansible
+/bin/ansible-config
+/bin/ansible-connection
+/bin/ansible-console
+/bin/ansible-doc
+/bin/ansible-galaxy
+/bin/ansible-inventory
+/bin/ansible-playbook
+/bin/ansible-pull
+/bin/ansible-test
+/bin/ansible-vault
+/bin/automat-visualize
+/bin/cftp
+/bin/ckeygen
+/bin/conch
+/bin/git-filter-repo
+/bin/git-nbdiffdriver
+/bin/git-nbdifftool
+/bin/git-nbmergedriver
+/bin/git-nbmergetool
+/bin/hg-nbdiff
+/bin/hg-nbdiffweb
+/bin/hg-nbmerge
+/bin/hg-nbmergeweb
+/bin/jupyter
+/bin/jupyter-dejavu
+/bin/jupyter-execute
+/bin/jupyter-kernel
+/bin/jupyter-kernelspec
+/bin/jupyter-migrate
+/bin/jupyter-nbconvert
+/bin/jupyter-run
+/bin/jupyter-server
+/bin/jupyter-troubleshoot
+/bin/jupyter-trust
+/bin/mailmail
+/bin/nbdiff
+/bin/nbdiff-web
+/bin/nbdime
+/bin/nbmerge
+/bin/nbmerge-web
+/bin/nbshow
+/bin/pbr
+/bin/pygmentize
+/bin/pyhtmlizer
+/bin/send2trash
+/bin/tkconch
+/bin/tqdm
+/bin/trial
+/bin/twist
+/bin/twistd
+/bin/virtualenv
+/bin/virtualenv-clone
+/bin/virtualenvwrapper.sh
+/bin/virtualenvwrapper_lazy.sh
+/bin/wamp
+/bin/wormhole
+/bin/xbrnetwork
+/bin/xbrnetwork-ui
+
 # Locally built stuff
 /bin/uncrustify
 
