--- a/.gitmodules
+++ b/.gitmodules
@@ -3,7 +3,7 @@
   url = https://github.com/tmux-plugins/tpm
 [submodule "etc/linux-home/tmux/plugins/tmux-resurrect"]
   path = etc/linux-home/tmux/plugins/tmux-resurrect
-  url = https://github.com/Purg/tmux-resurrect.git
+  url = https://github.com/tmux-plugins/tmux-resurrect
 [submodule "etc/linux-home/vim/bundle/Vundle.vim"]
 	path = etc/linux-home/vim/bundle/Vundle.vim
 	url = https://github.com/VundleVim/Vundle.vim.git
