Added tmux-continuum plugin

--- a/etc/linux-home/tmux.conf
+++ b/etc/linux-home/tmux.conf
@@ -82,9 +82,11 @@ bind-key K clear-history \; display "Cleared pane history"
 # List plugins for TPM
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
+set -g @plugin 'tmux-plugins/tmux-continuum'
 
 # Resurrect plugin options
 set -g @resurrect-capture-pane-contents 'on'
+set -g @continuum-restore 'on'
 
 # Initialize Tmux Plugin Manager (TPM)
 # (this must stay at bottom)
