--- a/etc/linux-home/tmux.conf
+++ b/etc/linux-home/tmux.conf
@@ -6,7 +6,7 @@ set -g default-terminal "screen-256color"
 # Mouse mode
 # NOTE: Hold Left-Shift to perform "normal" terminal mouse commands like
 #       highlighting for copy-paste and middle-clicking.
-#set -g mouse on
+set -g mouse on
 
 # Make history longer
 set-option -g history-limit 10000
